# School-POS-System

./: .clang-format  .gitignore  CMakeLists.txt  CODE_OF_CONDUCT.md  CmakeLists.txt  GUIDE.md  Makefile  README.md  TODO.md
.github/ISSUE_TEMPLATE/: contribute.yml
.github/workflows/: format.yml  test.yml
__tests__/: main_test.cpp
_legacy/: _renderer.hpp  _renderer2.hpp
include/: README.md  contrib.hpp  keyboard.hpp  logger.hpp  looplambda.hpp  observer.hpp  renderer.hpp  screen.hpp  state.hpp  utils.hpp
include/ast/: node.hpp
include/components/: select.hpp
include/constants/: metadata.hpp  utils.hpp
include/contrib/: menu.hpp  state.hpp  storage.hpp  utils.hpp
legacy/: _node.hpp  screen.hpp
src/: contrib.cpp  keyboard.cpp  looplambda.cpp  main.cpp  renderer.cpp  screen.cpp  state.cpp  utils.cpp
src/ast/: node.cpp
src/contrib/: menu.cpp  state.cpp  storage.cpp  utils.cpp
storage/: orders.csv
